--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -17,16 +17,16 @@
     <p class="title-text">About Us</p>
 </div>
 <div class="container center">
-    <div class="name-container">
-        <p class="h5-text">{{bride_name}}</p>
+    <div class="name-container" data-aos="zoom-in" data-aos-duration="5000">
+        <p class="h5-text wedding-names">{{bride_name}}</p>
         <p class="h7-text">{{bride_heritance}} daughter of</p> 
         <p class="h6-text">Mr. {{bride_father}} & Mrs. {{bride_mother}}</p>
     </div>
     <div class="image-container image-hideable">
         <img ngSrc="../../assets/image/Image 4.png" width="400" height="400">
     </div>
-    <div class="name-container">
-        <p class="h5-text">{{groom_name}}</p>
+    <div class="name-container" data-aos="zoom-in" data-aos-duration="5000">
+        <p class="h5-text wedding-names">{{groom_name}}</p>
         <p class="h7-text">{{groom_heritance}} son of</p> 
         <p class="h6-text">Mr. {{groom_father}} & Mrs. {{groom_mother}}</p>
     </div>
