--- a/src/app/countdown/countdown.component.html
+++ b/src/app/countdown/countdown.component.html
@@ -1,18 +1,18 @@
 @if(!eventStarted){
     <div class="countdown-grid">
-    <div class="time-box">
+    <div class="time-box" data-aos="flip-down" data-aos-duration="5000">
         <span class="number">{{ days }}</span>
         <span class="label">Days</span>
     </div>
-    <div class="time-box">
+    <div class="time-box" data-aos="flip-down" data-aos-duration="5000">
         <span class="number">{{ hours }}</span>
         <span class="label">Hours</span>
     </div>
-    <div class="time-box">
+    <div class="time-box" data-aos="flip-down" data-aos-duration="5000">
         <span class="number">{{ minutes }}</span>
         <span class="label">Minutes</span>
     </div>
-    <div class="time-box">
+    <div class="time-box" data-aos="flip-down" data-aos-duration="5000">
         <span class="number">{{ seconds }}</span>
         <span class="label">Seconds</span>
     </div>
