--- a/src/app/map-modal/map-modal.component.html
+++ b/src/app/map-modal/map-modal.component.html
@@ -4,7 +4,7 @@
       <!-- This div is the target for our Leaflet map -->
       <div id="leaflet-map-container"></div>
       <div class="copy-text">
-        <button class="my-button" (click)="copyText()" [class.copied]="isCopied">
+        <button class="button-primary" (click)="copyText()" [class.copied]="isCopied">
           {{ isCopied ? 'Copied!' : 'Copy Link' }}
         </button>
       </div>
