--- a/src/app/title/title.component.html
+++ b/src/app/title/title.component.html
@@ -1,13 +1,32 @@
-<div class="container">
-    <div class="title-img">
-        <img src="../../assets/image/Image 1.png">
+<div class="petals-section">
+    <div class="petals-container">
+        <div class="petal"></div>
+        <div class="petal"></div>
+        <div class="petal"></div>
+        <div class="petal"></div>
+        <div class="petal"></div>
+        <div class="petal"></div>
+        <div class="petal"></div>
+        <div class="petal"></div>
+        <div class="petal"></div>
+        <div class="petal"></div>
+        <div class="light"></div>
+        <div class="light"></div>
+        <div class="light"></div>
+        <div class="light"></div>
+        <div class="light"></div>
     </div>
-    <div class="title-content">
-        <p class="subtitle-text top-desc"><b>Dear {{ guestName }}</b>, you are invited</p>
-        <p class="title-text">The Wedding of</p>
-        <p class="title-text">Kevin & Cassie</p>
-        <p class="subtitle-text">{{ date }}</p>
-        <button class="my-button" (click)="notifyParentToScroll()">Open Invitation</button>
+    <div class="container">
+        <div class="title-img" data-aos="zoom-in" data-aos-duration="5000">
+            <img src="../../assets/image/Image 1.png">
+        </div>
+        <div class="title-content">
+            <p class="subtitle-text top-desc"><b>Dear {{ guestName }}</b>, you are invited</p>
+            <p class="title-text">The Wedding of</p>
+            <p class="wedding-names">Kevin & Cassie</p>
+            <p class="subtitle-text">{{ date }}</p>
+            <button class="button-primary" (click)="notifyParentToScroll()">Open Invitation</button>
+        </div>
     </div>
 </div>
 <div class="separator"> 
