--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -26,12 +26,17 @@
 }
 
 .name-container{
-    border: 1px solid styles.$light-gold;
+    border: 2px solid styles.$light-gold;
     border-radius: 20px;
-    padding: 10px;
+    padding: 1rem;
     width: 25vw !important;
     height: 100% !important;
     text-align: center;
+}
+
+.wedding-names{
+    font-family: "Dancing Script", cursive;
+    font-size: 2em;
 }
 
 @media screen and (max-width:600px) {
@@ -53,8 +58,7 @@
     }
 
     .name-container{
-        margin: 2vw auto;
-        width: 95% !important;
+        width: 80vw !important;
     }
 
     .about-desc{
