--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-loader [isLoading]="isLoading"></app-loader>
 <router-outlet></router-outlet>
 <app-map-modal></app-map-modal>
 <app-gift-modal></app-gift-modal>
