--- a/src/app/schedule/schedule.component.scss
+++ b/src/app/schedule/schedule.component.scss
@@ -10,7 +10,7 @@
 }
 
 .sub-section{
-    border: 1px solid styles.$light-gold;
+    border: 2px solid styles.$light-gold;
     border-radius: 20px;
     padding: 0px 2vw 24px 2vw;
     text-align: center;
@@ -19,16 +19,42 @@
 }
 
 button {
-    color: wheat;
-    background-color: styles.$dark-brown;
+    // color: wheat;
+    // background-color: styles.$dark-brown;
     padding: 12px 24px;
+}
+
+.title-text-card {
+    font-family: "Dancing Script";
+  font-size: 2rem;
+  font-weight: 600;
+  margin-bottom: 0.5rem;
+}
+
+.subtitle2-text-card {
+  font-size: 1rem;
+  color: #7a6464;
+  font-style: italic;
+  margin-bottom: 0.75rem;
+}
+
+.subtitle1-text-card {
+  font-size: 0.95rem;
+  line-height: 1.5;
+  color: #4a3c3c;
+}
+
+.subtitle3-text-card {
+  font-size: 0.95rem;
+  line-height: 1.5;
+  color: #4a3c3c;
 }
 
 @media screen and (max-width:600px) {
     .container {
         display: flex;
         flex-direction: column;
-        gap: 2.5vw;
+        gap: 4vw;
     }
 
     .sub-section{
